posiciona a logo e os botões no header

--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="homePage.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo-header">
+            <img src="imagens/logo-header.png" alt="logo-header">
+        </div>
+        <div class="menu-header">
+            <button>Quem somos</button>
+            <button>Serviços</button>
+            <button>Blog</button>
+            <button>Contato</button>
+        </div>
+    </header>
 </body>
 </html>
