Posiciona mais uma imagem e parágrafos

--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -19,5 +19,12 @@
             <button>Contato</button>
         </div>
     </header>
+    <main>
+        <div class="container1">
+            <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate, veritatis, blanditiis corporis temporibus modi esse quo laborum asperiores voluptas eum deserunt eius facilis eligendi totam delectus. Aspernatur quis doloribus magni?</h2>
+            <img src="/imagens/foto-container.jpg" alt="imagem princial">
+            <button>Saiba Mais</button>
+        </div>
+    </main>
 </body>
 </html>
