--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norma Saúde - Especialistas em Vigilância Sanitária</title>
-    <link rel="stylesheet" href="homePage.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="/pages/homePage/homePage.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+    <div class="social-bar">
+        <!-- Aqui você pode colocar os ícones/link para as redes sociais -->
+        <a href="#"><img src="/imagens/facebook-icon.png" alt="Facebook"></a>
+        <a href="#"><img src="/imagens/twitter-icon.png" alt="Twitter"></a>
+        <a href="#"><img src="/imagens/instagram-icon.png" alt="Instagram"></a>
+    </div>
     <header>
-        <div class="logo-header">
-            <img src="imagens/logo-header.png" alt="logo-header">
-        </div>
-        <div class="menu-header">
-            <button>Quem somos</button>
-            <button>Serviços</button>
-            <button>Blog</button>
-            <button>Contato</button>
-        </div>
+        <nav id="nav-sup">
+            <a href="#"><img src="/imagens/logo-header.png" alt="logo-header" id="logo-header"></a>
+            <ul id="menu-header">
+                <li><a href="#"><button class="botoes-menu">Quem somos nós</button></a></li>
+                <li><a href="#"><button class="botoes-menu">Serviços</button></a></li>
+                <li><a href="#"><button class="botoes-menu">Blog</button></a></li>
+                <li><a href="#"><button class="botoes-menu">Contato</button></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="container1">
-            <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate, veritatis, blanditiis corporis temporibus modi esse quo laborum asperiores voluptas eum deserunt eius facilis eligendi totam delectus. Aspernatur quis doloribus magni?</h2>
-            <img src="/imagens/foto-container.jpg" alt="imagem princial">
-            <button>Saiba Mais</button>
+        <div class="banner-principal">
+            <h1>Norma Saúde</h1>
+            <p>Somos uma empresa especialista em preparar estabelecimentos de saúde para a vigilância santirária</p>
         </div>
     </main>
+    <footer>
+        <div class="container-footer"></div>
+    </footer>
 </body>
 </html>
