--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -5,19 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/pages/homePage/homePage.css">
+    <link rel="stylesheet" href="/norma-saude/pages/homePage/homePage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <div class="social-bar">
-        <!-- Aqui você pode colocar os ícones/link para as redes sociais -->
-        <a href="#"><img src="/imagens/facebook-icon.png" alt="Facebook"></a>
-        <a href="#"><img src="/imagens/twitter-icon.png" alt="Twitter"></a>
-        <a href="#"><img src="/imagens/instagram-icon.png" alt="Instagram"></a>
-    </div>
+    
     <header>
         <nav id="nav-sup">
-            <a href="#"><img src="/imagens/logo-header.png" alt="logo-header" id="logo-header"></a>
+            <a href="#"><img src="/norma-saude/imagens/logo-header-removebg-preview.png" alt="logo-header" id="logo-header"></a>
             <ul id="menu-header">
                 <li><a href="#"><button class="botoes-menu">Quem somos nós</button></a></li>
                 <li><a href="#"><button class="botoes-menu">Serviços</button></a></li>
@@ -33,7 +28,14 @@
         </div>
     </main>
     <footer>
-        <div class="container-footer"></div>
+        <div class="container-footer">
+            <div class="social-bar">
+                <!-- Aqui você pode colocar os ícones/link para as redes sociais -->
+                <a href="#"><img src="/norma-saude/imagens/PhoneCall.svg" alt="Phone"></a>
+                <a href="#"><img src="/norma-saude/imagens/LinkedinSocial.svg" alt="LinkedIn"></a>
+                <a href="#"><img src="/norma-saude/imagens/InstagramSocial.svg" alt="Instagram"></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
