remonta a estrutura e adiciona os cards

--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -5,59 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norma Saúde - Especialistas em Vigilância Sanitária</title>
-    <link rel="stylesheet" href="/pages/homePage/homePage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-</head> 
+    <link rel="stylesheet" href="/pages/homePage/homePage.css">
+</head>
 <body>
-    
-    <header>
-        <nav id="nav-sup">
-            <a href="/pages/homePage/homePage.html"><img src="/imagens/logo-header.svg" alt="logo-header" id="logo-header"></a>
-            <ul id="menu-header">
-                <li><a href="#"><button class="botoes-menu">Quem somos nós</button></a></li>
-                <li><a href="#"><button class="botoes-menu">Serviços</button></a></li>
-                <li><a href="#"><button class="botoes-menu">Blog</button></a></li>
-                <li><a href="#"><button class="botoes-menu">Contato</button></a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="banner-principal">
-            <h1 class="txt-banner-principal">Norma Saúde</h1>
-            <p class="txt-banner-principal">Somos uma empresa especialista em preparar estabelecimentos de saúde para a vigilância santirária</p>
-        </div>
-        <div class="container-servicos"></div>
-        <div class="container-cases"></div>
-        <div class="container-orcamento"></div>
-    </main>
-    <footer>
-        <div class="container">
-            <div class="col-4">
-                <h4>Sobre a Norma</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate odit doloremque, obcaecati sint commodi voluptatum sequi sit soluta aspernatur, dolore, explicabo dolores nam nisi laudantium aut illo accusantium atque nihil!</p>
-            </div>
-            <div class="col-3">
-                <div class="social-bar">
-                    <a href="#"><img src="/imagens/PhoneCall.svg" alt="Phone"></a>
-                    <a href="#"><img src="/imagens/LinkedinSocial.svg" alt="LinkedIn"></a>
-                    <a href="#"><img src="/imagens/InstagramSocial.svg" alt="Instagram"></a>
-                    <hr>
+    <header class="w-100">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col" id="col-nav">
+                    <nav class="navbar navbar-expand-md navbar-light w-100">
+                        <div class="container">
+                            <a class="navbar-brand" href="#"><img src="/imagens/logo-header.svg" alt="Logo header" id="logo-header"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav ms-auto custom-navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><button>Página inicial</button></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><button>Sobre nós</button></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><button>Serviços</button></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><button>Blog</button></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><button>Contato</button></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
-            <div class="col-3">
-                <ul class="menu-footer">
-                    <li><a href="#" class="botoes-footer">Quem somos nós</a></li>
-                    <li><a href="#" class="botoes-footer">Serviços</a></li>
-                    <li><a href="#" class="botoes-footer">Blog</a></li>
-                    <li><a href="#" class="botoes-footer">Contato</a></li>
-                </ul>
+        </div>
+    
+    </header>
 
+    <main>
+       <section id="slide-texto">
+        <div class="container">
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-6">
+                    <h1>Norma Saúde</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque distinctio maiores dolore asperiores sed nostrum explicabo! Necessitatibus quaerat nesciunt distinctio magnam vero nulla, soluta veniam voluptatem, nemo rem vitae repellat?</p>
+                </div>
+                <div class="col-2"></div>
             </div>
         </div>
+       </section>
+       <section class="container-servicos">
+        <div class="container-fluid">
+            <div class="row"><h1 id="titulo-servicos">O QUE FAZEMOS EM NOSSA ASSESSORIA?</h1></div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="/imagens/foto-pc.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Legalização sanitária</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="/imagens/protocolos.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Desenvolvimento de protocolos</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="/imagens/treinamentos.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Treinamentos</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+       </section>
+       <section>Banner 1</section>
+       <section>Reviews</section>
+       <section>Frase comercial</section>
 
-    </footer>
+    </main>
+
 </body>
 </html>
