faz ajustes de posicionamento

--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -100,11 +100,10 @@
         <div class="container feature-container">
             <div class="row feature-row">
                 <div class="col-md-5 feature-text">
-                    <h2>Frase pika</h2>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
                 </div>
-                <div class="col-md-2 feature-divider">
-                    <div class="vr-vertical"></div>
-                    <div class="vr-horizontal"></div>
+                <div class="col-md-1 feature-divider">
+                    <hr class="rule">
                 </div>
                 <div class="col-md-5 feature-list">
                     <ul class="content-table">
