ajusta as pastas e arquivos

--- a/norma-saude.html
+++ b/norma-saude.html
@@ -125,5 +125,19 @@
 
 </main>
 
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col"><a href="logo-footer"></a></div>
+            <div class="col"><h3>Onde nos encontrar</h3></div>
+            <div class="col"><h3>Contato</h3></div>
+            <div class="col"><h3>Redes sociais</h3></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
