ajusta o caminho das imagens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col" id="col-nav">
                     <nav class="navbar navbar-expand-md navbar-light w-100">
                         <div class="container">
-                            <a class="navbar-brand" href="#"><img src="/imagens/logo-header.svg" alt="Logo header" id="logo-header"></a>
+                            <a class="navbar-brand" href="#"><img src="imagens/logo-header.svg" alt="Logo header" id="logo-header"></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -67,7 +67,7 @@
             <div class="row justify-content-center cards-container">
                 <div class="col-lg-4 col-md-6 card-item">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top" src="/imagens/foto-pc.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="imagens/foto-pc.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Legalização sanitária</h5>
                             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 card-item">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top" src="/imagens/protocolos.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="imagens/protocolos.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Desenvolvimento de protocolos</h5>
                             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 card-item">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top" src="/imagens/treinamentos.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="imagens/treinamentos.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Treinamentos</h5>
                             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum adipisci necessitatibus corporis mollitia voluptatem quisquam facilis reiciendis, totam placeat omnis vitae quod sed repudiandae deserunt odit! In labore adipisci possimus!</p>
