--- a/index.html
+++ b/index.html
@@ -126,15 +126,49 @@
 </main>
 
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col"><a href="logo-footer"></a></div>
-            <div class="col"><h3>Onde nos encontrar</h3></div>
-            <div class="col"><h3>Contato</h3></div>
-            <div class="col"><h3>Redes sociais</h3></div>
+    <div class="container footer-container">
+        <div class="row footer-row">
+            <div class="col-3"><a href="#"><img src="imagens/logo-footer.svg" alt="logo-footer" id="logo-footer"></a></div>
+            <div class="col-3">
+                <h3>Onde nos encontrar</h3>
+                <p id="footer-address">Rua Jaceguai,Nº 208, sala 1108, Prado. Belo Horizonte - Minas Gerais </p>
+            </div>
+            <div class="col-3">
+                <h3>Contato</h3>
+                <ul id="contact-card">
+                    <li>saudenorma@gmail.com</li>
+                    <li>(31) 99618-1819</li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <h3>Redes sociais</h3>
+                <ul class="social-bar">
+                    <li class="social-item">
+                        <a href="#"><img src="imagens/Logo Whatsapp.svg" alt="Whatsapp" class="footer-icons"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#"><img src="imagens/Logo Instagram.svg" alt="Instagram" class="footer-icons"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#"><img src="imagens/Logo Linkedin.svg" alt="Linkedin" class="footer-icons"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="row">
-            <div class="col"></div>
+        <div class="row footer-row">
+            <div class="col center-divider">
+                <nav class="footer-nav">
+                    <ul class="footernav-nav">
+                        <li class="footernav-item">HOME |</li>
+                        <li class="footernav-item"> SOBRE NÓS |</li>
+                        <li class="footernav-item"> SERVIÇOS |</li>
+                        <li class="footernav-item"> BLOG |</li>
+                        <li class="footernav-item"> CONTATO</li>
+                    </ul>
+                </nav>
+                <hr class="footernav-divider">
+                <p>2023 Norma Saúde | Todos os direitos reservados</p>
+            </div>
         </div>
     </div>
 </footer>
