--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
 <footer>
     <div class="container footer-container">
         <div class="row footer-row">
-            <div class="col-3"><a href="#"><img src="imagens/logo-footer.svg" alt="logo-footer" id="logo-footer"></a></div>
-            <div class="col-3">
+            <div class="col-md-3"><a href="#"><img src="imagens/logo-footer.svg" alt="logo-footer" id="logo-footer"></a></div>
+            <div class="col-md-3">
                 <h3>Onde nos encontrar</h3>
                 <p id="footer-address">Rua Jaceguai,Nº 208, sala 1108, Prado. Belo Horizonte - Minas Gerais </p>
             </div>
-            <div class="col-3">
+            <div class="col-md-3">
                 <h3>Contato</h3>
                 <ul id="contact-card">
                     <li>saudenorma@gmail.com</li>
                     <li>(31) 99618-1819</li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-md-3">
                 <h3>Redes sociais</h3>
                 <ul class="social-bar">
                     <li class="social-item">
